# crony-cli

./: .gitignore  README.md  pyproject.toml
crony/: __init__.py  cli.py  daemon.py  db.py  i18n.py  notifications.py
crony/translations/: en.json  es.json
